# listsend

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
example/: .env  email.env  email.tpl  list.csv  receivers.csv  smtp.env  template.hbs  template.html
src/: main.rs
