[package]
name = "listsend"
version = "0.4.11"
edition = "2021"
authors = ["github.com/pepa65 <pepa65@passchier.net>", "Ahmad Saugi <saugi.dev@gmail.com>"]
description = "Send emails to CSV list from template on CLI"
repository = "https://github.com/pepa65/listsend"
keywords = ["email", "cli", "template", "csv", "attachment"]
documentation = "https://docs.rs/eqr"
readme = "README.md"
license = "MIT/Apache-2.0"

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/{version}/{name}"
pkg-fmt = "bin"
disabled-strategies = ["quick-install", "compile"]
target-family = "Linux"
target-arch = "X86_64"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
dotenv = ">= 0.15.0"
handlebars = "6"
lettre = { version = ">= 0.11.11", features = ["builder"] }
openssl-sys = { version = ">= 0.9.104", features = ["vendored"] }
serde = { version = "1", features = ["derive"] }
tap = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = 0
