[package]
name = "listsend"
version = "0.4.91"
edition = "2024"
authors = ["github.com/pepa65 <pepa65@passchier.net>", "Ahmad Saugi <saugi.dev@gmail.com>"]
description = "Send emails to CSV list from template on CLI"
repository = "https://github.com/pepa65/listsend"
documentation = "https://docs.rs/listsend"
readme = "README.md"
license = "MIT/Apache-2.0"
categories = ["command-line-utilities", "email"]
keywords = ["email", "cli", "template", "csv", "attachment"]

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/{version}/{name}"
pkg-fmt = "bin"
disabled-strategies = ["quick-install", "compile"]
target-family = "Linux"
target-arch = "X86_64"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
csv = "1.3.1"
dotenv = "0.15.0"
handlebars = "6.3.0"
lettre = { version = "0.11.11", features = ["builder"] }
openssl-sys = { version = "0.9.104", features = ["vendored"] }
serde = { version = "1.0.217", features = ["derive"] }
tap = "1.0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = 0
